--- a/script/Assignment#3_Viva&Yaohan_Q1.Rmd
+++ b/script/Assignment#3_Viva&Yaohan_Q1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment#3_Logistic Regression"
-author: "Viva"
+author: "Viva/Yaohan"
 date: "`r Sys.Date()`"
 output:
   html_document:
