--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -46,56 +46,34 @@ conflicts_prefer(dplyr::filter)
 conflicts_prefer(dplyr::recode)
 ```
 
-```{r load data}
+# Data Wrangling
+
+1. Transit Data
+- Transit Ridership
+MBTA Rail Ridership by Time Period, Season, Route/Line, and Stop: https://mbta-massdot.opendata.arcgis.com/datasets/9fea7862501f4c59ab2c001ad6ae19b0_0/explore
+The data is for Fall2019, Fall2018, and Fall2017. Since Fall2018 only has data for September, so we only use ridership data for Fall2019 and Fall2017.
+
+- Transit Station
+MBTA Rapid Transit: https://www.mass.gov/info-details/massgis-data-mbta-rapid-transit#downloads-
+Name and location for each transit stop. Combined with ridership data.
+
+- Definition for "Fall" in Boston
+Important Work Restrictions for massDOT: https://www.mass.gov/doc/controls-guidelines-attachment-a-important-work-restrictions/download
+The Fall season in Boston is from August.15 to November.1, so we use bike data for August, September and October.
+
+2. Bike Data
+- Bike ridership
+Blue Bikes Comprehensive Trip Histories: https://s3.amazonaws.com/hubway-data/index.html
+
+- Bike Station
+Bluebikes Stations: https://bluebikes.com/system-data
+
+3. Demographic Data
+
+4. Other Data
+```{r load_data, message = FALSE, warning = FALSE}
 ## transit station data
-tran <- read_csv(here::here('data/raw/201901-bluebikes-tripdata.csv'))
-colnames(tran)
-length(unique(tran$`end station name`))
-sta.end <- tran %>%
-  select(`end station id`,`end station latitude`, `end station longitude`)%>% 
-  distinct(`end station id`, .keep_all = TRUE)
 
-sta.sta <- tran %>%
-  select(`start station id`,`start station latitude`, `start station longitude`)%>% 
-  distinct(`start station id`, .keep_all = TRUE)
-
-# is there any station only serve as end/start station -> none
-dif <- sta.sta %>%
-  select(`start station id`) %>%
-  anti_join(sta.end %>% select(`end station id`), by = c('start station id' = 'end station id' ))
-
-# metro station sf
-sta <- sta.end %>%
-  st_as_sf(coords = c("end station longitude", "end station latitude"), crs = 4326)
-  #???? 没找到scrs
-  st_transform(crs = 'EPSG:2001')
-
-# metro buffer
-staBuffer <- st_buffer(sta, 2640)
-
-## bike station data
-bike <- read_csv(here::here('data/raw/current_bluebikes_stations.csv')) 
-
-#set the first row as the colnames
-colnames(bike) <- as.character(unlist(bike[1, ]))
-bike <- bike[-1, ]
-
-# bike station sf
-bike <- bike %>%
-  st_as_sf(coords = c("Long", "Lat"), crs = 4326)
-
-
-# mapping -》 change unit
-ggplot() + 
-  geom_sf(data=staBuffer)+
-  geom_sf(data=sta,
-          aes(colour = 'blue')) + 
-  geom_sf(data=bike, 
-          aes(colour = 'green')) +
-  labs(title="Metro and Bike Stations", 
-       subtitle="Philadelphia, PA", 
-       caption="Figure 2.5") +
-  theme_void()
 ```
 
 
