--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -117,6 +117,18 @@ mbta_core <- st_read(here::here("data/final/Core_Service_Area/Core_Service_Area.
 ```{r data_clean}
 # Transit Data
 ## Transit Ridership
+tran_rider_17 <- tran_rider %>%
+  filter(season == "Fall 2017")
+
+tran_rider_19 <- tran_rider %>%
+  filter(season == "Fall 2019")
+
+name_17 <- unique(tran_rider_17$stop_name)
+name_stop <- tran_stop$STATION
+not_in_station <- as.data.frame(setdiff(name_17, name_stop))
+name_19 <- unique(tran_rider_19$stop_name)
+sum(name_19 %in% tran_stop$STATION)
+##
 
 
 # Bike Data
